tests/expectations/compiler/structs/cyclic_structs_four_fail.out
DCE_ENABLED:
Error [EPAR0370005]: expected ; -- found ','
    --> compiler-test:8:18
     |
   8 |         baz: [Baz, 2],
     |                  ^
DCE_DISABLED:
Error [EPAR0370005]: expected ; -- found ','
    --> compiler-test:8:18
     |
   8 |         baz: [Baz, 2],
     |                  ^